--- a/_posts/2017-04-04-test.markdown
+++ b/_posts/2017-04-04-test.markdown
@@ -3,8 +3,10 @@ layout: post
 title:  "Wuddup World?"
 date:   2017-04-04 01:53:39 -0400
 categories: jekyll update
+permalink: HOLYFUCK
 ---
 This is pretty tight:
+<!--more-->
 
 {% highlight ruby %}
 def print_wuddup(Wuddup)
