--- a/_posts/0001-01-01-jesus.markdown
+++ b/_posts/0001-01-01-jesus.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "WOO!"
 date:   0001-04-04 12:53:39 -0400
-categories: jekyll update
+categories: jekyll
 ---
 
 What is Lorem Ipsum?
